--- a/style.css
+++ b/style.css
@@ -16,9 +16,6 @@ body {
   margin: 0%;
   /*padding-bottom: 42%;*/
   /*justify-content: center;*/
-  height: 100%;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
 }
 
 .title {
@@ -49,7 +46,6 @@ body {
   border-radius: 10%;
   align-items: center; 
   justify-content: center; 
-  touch-action: manipulation; /*to prevent zoom after double tap*/
 }
 
 #help,
@@ -71,8 +67,7 @@ body {
     font-size: 1.5rem;
   }
 }
-
-.container {
+.container{
   display: grid;
   z-index: 2;
   grid-template-columns: 10% 80% 5% 5%;
@@ -83,15 +78,9 @@ body {
   /*grid-template-rows: 5% 65% 30%;*/
   /*grid-template-columns: 100%;*/
   /*grid-gap: 10px; necessary?*/
-  /*width: 96vw;
-  height: 96vh;
-  padding: 2vh 2vw 2vh 2vw;*/
-  width: 100%;
-  height: 100%;
-  /*height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);*/
-  /*justify-content: center;
-  align-items: center;*/
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
 }
 
 .tile-container {
@@ -115,14 +104,10 @@ body {
 .tile-container .guessRow {
   display: flex; /*need this so rows are in the right position*/
   /*height: calc(100%/6); /*6 rows*/
-  /*height: calc((0.97 * 100vw) / 5); /*for mobile screens*/
-  /*height: calc((var(--vh) * 100%) / 5); /*for mobile screens*/
-
-  /*height: calc(99% / 5);*/
-  /*height: 100%;
-  width: 97%;*/
+  height: calc((0.97 * 100vw) / 5); /*for mobile screens*/
   width: 97%;
-  height: 15%;
+  /*width: 100%;
+  height: 100%;*/
   align-items: center;
   justify-content: center;
 }
@@ -189,12 +174,8 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc((0.99 * 100vw) / 5);*/
-    /*height: 100%;*/
-    /*height: calc((var(--vh) * 97%) / 5); /*for mobile screens*/
-
-    /*width: 99%;*/
-    height: 15%;
+    height: calc((0.99 * 100vw) / 5);
+    width: 99%;
   }
 
   .tile-container .tile {
@@ -213,11 +194,16 @@ body {
     height: 100% !important;*/
   }
 
+  
+  /*.tile-container .guessRow {
+    height: calc((1 * 100vw) / 5);
+    width: 100%;
+  }*/
+
   /*.tile-container svg {
     transform: scale(0.75);
   }*/
-
-  .message-container p {
+  .message-container p{
     font-size: .5rem;
   }
 
@@ -233,11 +219,10 @@ body {
     font-size: 0.7rem !important;
   }
 
-  .tile-container .guessRow {
-    /*height: calc((0.97 * 100vw) / 5);
-    width: 97% !important;*/
-    height: 15%;
-  }
+  /*.tile-container .guessRow {
+    height: calc((0.97 * 100vw) / 5);
+    width: 97% !important;
+  }*/
 
   .tile-container svg {
     transform: scale(0.85);
@@ -343,9 +328,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(95%/6);*/
-    /*height: 100%;*/
-    height: 15%;
+    height: calc(95%/6);
   }
 
 }
@@ -369,8 +352,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(85%/6);*/
-    height: 14%;
+    height: calc(85%/6);
   }
 
 }
@@ -382,8 +364,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(95%/6);*/
-    height: 15%;
+    height: calc(95%/6);
   }
 
   .tile-container svg {
@@ -420,8 +401,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(85%/6);*/
-    height: 14%;
+    height: calc(85%/6);
   }
   
   .tile-container svg {
@@ -452,8 +432,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(95%/6);*/
-    height: 15%;
+    height: calc(95%/6);
   }
 
   .tile-container svg {
@@ -469,8 +448,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(65%/6);*/
-    height: 11%;
+    height: calc(65%/6);
   }
 
   .modal-content {
@@ -522,8 +500,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(35%/6);*/
-    height: 6%;
+    height: calc(35%/6);
   }
 
   .tile-container svg {
@@ -551,8 +528,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(95%/6); */
-    height: 15%;
+    height: calc(95%/6); 
   }
 
   .tile-container svg {
@@ -581,8 +557,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(80%/6); */
-    height: 14%;
+    height: calc(80%/6); 
   }
 
   .tile-container svg {
@@ -611,8 +586,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(50%/6); */
-    height: 8%;
+    height: calc(50%/6); 
   }
 
   .tile-container svg {
@@ -648,8 +622,7 @@ body {
   }
   
   .tile-container .guessRow {
-    /*height: calc(70%/6); */
-    height: 12%;
+    height: calc(70%/6); 
   }
 
   .tile-container svg {
@@ -676,8 +649,7 @@ body {
   }
 
   .tile-container .guessRow {
-    /*height: calc(80%/6); */
-    height: 14%;
+    height: calc(80%/6); 
   }
 
   .tile-container svg {
@@ -692,7 +664,7 @@ body {
     height: 100% !important;*/
   }
 
-  .message-container p {
+  .message-container p{
     /*font-size: 5.5rem !important;*/
   }
 
@@ -971,12 +943,6 @@ input:checked + .slider:before {
   /*align-items: end; !important*/
 }
 
-.edit-buttons {
-  display: flex;
-  flex-direction: column;
-  width: calc(100%/16);
-}
-
 #Delete {
   background-color: #844d4d;
 }
@@ -987,7 +953,7 @@ input:checked + .slider:before {
 
 .piano-container button {
   /*background-color: #699eb0;*/
-  /*width: calc(100%/16);*/
+  width: calc(100%/17);
   height: 40%;
   border-radius: 10%;
   font-weight: bold;
@@ -999,7 +965,7 @@ input:checked + .slider:before {
   display: flex;
   align-items: center; 
   justify-content: center; 
-  touch-action: manipulation; /*to prevent zoom after double tap*/
+
 }
 
 .key {
@@ -1013,7 +979,7 @@ input:checked + .slider:before {
   /*--width: 70px;*/
   height: 95%;
   /*--width: calc(100%/16);*/
-  width: calc(100%/16);
+  width: calc(100%/17);
   background-color: white;
   border: 1px solid #333;
 }
